<resources>
    <!--errors-->
    <string name="userAlreadyRegistred">User already registred</string>
    <string name="userInvalidCredentials">Invalid credetials</string>
    <string name="emailReuired">Email required</string>
    <string name="passwordRequired">Password required</string>
    <string name="confirmPasswordRequired">Confirm password</string>
    <string name="userNameRequired">Username required</string>
    <string name="emailInvalid">Invalid email</string>
    <string name="titleRequired">Title required</string>
    <string name="userAlreadyInChat">This name is already in use</string>
    <string name="userNotInChat">You are not in chat</string>

    <string name="title_activity_create_chart">Create chat</string>
    <string name="app_name">Geofy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hint_username">User name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirmPassword">Confirm password</string>
    <string name="login">Login</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register">Register</string>
    <string name="loading_text">Loading</string>
    <string name="errors_title">Error</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="bad_connection">Bad connection</string>
    <string name="hint_title">Title</string>
    <string name="create">Create</string>
    <string name="radius">Radius</string>
    <string name="last_message_empty">No messages, be the first!</string>
    <string name="title_activity_create">Chart</string>
    <string name="send_message">Type message</string>
    <string name="in_chat">You can post messages</string>
    <string name="not_in_chat">You are not in chart</string>
    <string name="enable_location">You must enable geolocation for proper application work</string>
    <string name="change">Change</string>
    <string name="required">Required</string>
    <string name="name">Name</string>
    <string name="change_name">Change name</string>
    <string name="update">Update</string>
    <string name="description">Description</string>
</resources>
