<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_login"
    android:background="@color/colorPrimary"
    android:padding="@dimen/activity_vertical_padding">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="50dp"/>
    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_username"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorHint"
        android:textColorHighlight="@android:color/white"
        android:textColorLink="@android:color/white"
        />
    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/hint_password"
        android:textColor="@android:color/white"
        android:textColorHint="@color/colorHint"
        android:textColorHighlight="@android:color/white"
        android:textColorLink="@android:color/white"/>
    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary_300" />
</LinearLayout>